core: ensure deterministic iteration order over set deserialised in ReflectiveConfigGroup